--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Game</title>
 
     <style>
         body {
@@ -19,8 +19,9 @@
 <body>
     <canvas id="gameCanvas" width="640" height="480"></canvas>
 
-    <script src="utils.js"></script>
-    <script src="scenes.js"></script>
+    <script src="/Scenes/TitleScene.js"></script>
+    <script src="/Scenes/GameScene.js"></script>
+    <script src="Game.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
